// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> hidden renders correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  line-height: 1.35;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  font-size: 0.875rem;
  font-weight: 600;
  color: #323232;
  margin: 0rem;
  margin-bottom: 0.75rem;
}

<Clean.label
  className="c0"
  hidden={true}
  m={0}
  mb={3}
  textStyle="label"
>
  Hello world
</Clean.label>
`;

exports[`<Label /> renders correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  line-height: 1.35;
  font-size: 0.875rem;
  font-weight: 600;
  color: #323232;
  margin: 0rem;
  margin-bottom: 0.75rem;
}

<Clean.label
  className="c0"
  hidden={false}
  m={0}
  mb={3}
  textStyle="label"
>
  Hello world
</Clean.label>
`;
